# tensorflow_wrapper

./: CMakeLists.txt  LICENSE  README.md  build_tensorflow.sh  deviceQuery  jetson.patch  tensorflow_wrapper-config.cmake  x86_64.Dockerfile  xavier.patch
docker/: intel.Dockerfile  nvidia.Dockerfile
example/: CMakeLists.txt
utils/: createSwap.sh
